<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Mix Player</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by&#8230;</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_name_desc">Name (desc)</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_length_desc">Length (desc)</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_date_desc">Date (desc)</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="play_as_audio_background">Play videos in background</string>
    <string name="play_as_audio_background_summary">Continue video playback in background when turning device screen off or clicking HOME button.</string>
    <string name="append">Append</string>
    <string name="insert_next">Insert next</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="last_playlist">Last playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="confirm_delete_folder">Delete the folder \'%1$s\' and all its contents?</string>
    <string name="confirm_delete_playlist">Delete playlist \'%1$s\'?</string>
    <string name="ringtone_set">The file \'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">Don\'t show this message again.</string>
    <string name="info_title">Video Player</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="songs">Songs</string>
    <plurals name="songs_quantity">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <plurals name="albums_quantity">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="one">1 subfolder</item>
        <item quantity="other">%d subfolders</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="one">1 media file</item>
        <item quantity="other">%d media files</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="noplaylist">No playlist found.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="directorynotfound">The directory path \'%1$s\' was not found.</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle_title">Shuffle mode</string>
    <string name="shuffle">Shuffle Off</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="repeat_title">Repeat mode</string>
    <string name="repeat">Repeat none</string>
    <string name="repeat_single">Repeat single</string>
    <string name="repeat_all">Repeat all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="firstsong">First song of the playlist</string>
    <string name="lastsong">Last song of the playlist</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_screen">Fit screen</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitle track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_bitrate_info">Bitrate: %1$s/s\n</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
    <string name="track_language_info">Language: %1$s\n</string>
    <string name="volume">Volume</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="brightness">Brightness</string>
    <string name="navmenu">navigation menu</string>
    <string name="advanced">advanced options</string>
    <plurals name="track_channels_info_quantity">
        <item quantity="one">1 channel\n</item>
        <item quantity="other">%1$d channels\n</item>
    </plurals>
    <string name="track_samplerate_info">Sample rate: %1$d Hz\n</string>
    <string name="track_resolution_info">Resolution: %1$dx%2$d\n</string>
    <string name="track_framerate_info">Frame rate: %1$.3f\n</string>
    <string name="tools">Tools</string>
    <string name="playback_speed">Playback speed</string>
    <string name="sleep_title">Sleep timer</string>
    <string name="sleep_in">Sleep in</string>
    <string name="sleep_cancel">Cancel sleep timer</string>
    <string name="jump_to_time">Jump to Time</string>
    <string name="subtitle_label">Add subtitle file</string>
    <string name="subtitle_select">Select subtitle file</string>
    <string name="no_file_picker_found">No file picker was found on the system.</string>
    <string name="server_add_title">Add a new server to favorites</string>
    <string name="server_domain_hint">Server address (domain name or IP)</string>
    <string name="server_share_hint">Network share name (or IP address)</string>
    <string name="server_folder_hint">Folder path (optional)</string>
    <string name="server_username_hint">Username</string>
    <string name="server_servername_hint">Server name, for conveniency</string>
    <string name="server_port">Port: </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="search_results">Search results</string>
    <string name="search_no_result">No media found</string>
    <string name="favorites_add">Add to favorites</string>
    <string name="favorites_remove">Remove from favorites</string>
    <string name="favorites_edit">Edit</string>
    <string name="favorite_added">Saved to favorites</string>
    <string name="favorite_removed">Removed from favorites</string>
    <string name="open">Open</string>
    <string name="open_mrl">Stream</string>
    <string name="open_mrl_dialog_title">Open network stream</string>
    <string name="open_mrl_dialog_msg">Enter network address: e.g. http://, mms:// or rtsp://</string>
    <string name="error_not_compatible">Sorry, your device is currently not supported by this version of Video Player for Android™.</string>
    <string name="error_problem">Sorry, Video Player for Android had a problem loading and had to close.</string>
    <string name="error_message_is">The error message is (please mention this when debugging):\n</string>
    <string name="empty" translatable="false"></string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="speed_placeholder" translatable="false">1.00x</string>
    <string name="load_1_period" translatable="false">.</string>
    <string name="load_2_period" translatable="false">..</string>
    <string name="load_3_period" translatable="false">...</string>
    <string name="colon" translatable="false">:</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">&#8722;</string>
    <string name="encountered_error_title">Playback error</string>
    <string name="encountered_error_message">Video Player encountered an error with this media.\nPlease try refreshing the media library.</string>
    <string name="invalid_location">The location %1$s cannot be played.</string>
    <string name="search">Search</string>
    <string name="search_history">Search history</string>
    <string name="playback_history_title">Playback history</string>
    <string name="playback_history_summary">Save all media played in History section</string>
    <string name="playback_speed_title">Save Playback Speed</string>
    <string name="playback_speed_summary">Remember the playback speed you set</string>
    <string name="video_player_tips">Video player tips:</string>
    <string name="seek">Seek</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio_sub">Audio tracks\nand subtitles</string>
    <string name="resize">Resize</string>
    <string name="options">Options</string>
    <string name="lock">Lock</string>
    <string name="ok_got_it">Got it, dismiss&#160;this</string>
    <string name="playlist_tips">Playlist tips</string>
    <string name="remove_song">Remove song</string>
    <string name="remove_playlist_item">%1$s has been dismissed from playlist</string>
    <string name="rearrange_order">Rearrange order</string>
    <string name="hold_to_seek">Hold to seek</string>
    <string name="audio_player_tips">Audio player tips</string>
    <string name="previous_next_song">Previous/Next song</string>
    <string name="show_playlist">Show playlist</string>
    <string name="hold_to_stop">Hold to stop</string>
    <string name="app_name_full">Video Player for Android</string>
    <string name="licence">License</string>
    <string name="revision">Revision</string>
    <string name="about">About</string>
    <string name="preferences">Settings</string>
    <string name="theme">Theme</string>
    <string name="night_mode">Night mode</string>
    <string name="network_browsing">Local Network</string>
    <string name="file_name">Filename</string>
    <string name="rate_stars">5-Star review encourage us!</string>
    <string name="rate_dislike">Dislike it</string>
    <string name="rate_cancel">Cancel</string>
    <string name="folders">Folders</string>
</resources>