<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/scrollable_group"
        android:checkableBehavior="single"
        android:orderInCategory="1">

        <item
            android:id="@+id/nav_directories"
            android:icon="@drawable/ic_menu_folder"
            android:title="@string/folders"/>

        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/video"/>

        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_audio"
            android:title="@string/audio"/>

        <item
            android:id="@+id/nav_network"
            android:visible="false"
            android:icon="@drawable/ic_menu_network"
            android:title="@string/network_browsing"/>

        <item
            android:id="@+id/nav_mrl"
            android:visible="false"
            android:icon="@drawable/ic_menu_stream"
            android:title="@string/open_mrl"/>

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history"/>

        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_theme"
            android:title="@string/theme"/>
    </group>
    <group
        android:id="@+id/fixed_group"
        android:checkableBehavior="single"
        android:orderInCategory="3">

        <item
            android:id="@+id/nav_night_mode"
            android:visible="false"
            android:icon="@drawable/ic_menu_night_mode"
            android:title="@string/night_mode"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_preferences"
            android:title="@string/preferences"/>

        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_app"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about"/>
    </group>
</menu>