<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="@dimen/info_default_margin"
              android:minWidth="280dp"
              >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rename"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/info_default_margin"
        android:layout_marginLeft="@dimen/half_default_margin"
        android:layout_marginStart="@dimen/half_default_margin"
        android:text="@string/file_name"
        android:textSize="14sp"
        android:textColor="@color/grey4xx"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rename_file_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/half_default_margin"
        android:layout_marginStart="@dimen/half_default_margin"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:maxLines="3"
            android:inputType="text"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="right">

        <TextView
            android:id="@+id/rename_file_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/info_default_margin"
            android:clickable="true"
            android:text="@string/cancel"
            />

        <TextView
            android:id="@+id/rename_file_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/info_default_margin"
            android:clickable="true"
            android:text="@string/ok"
            />

    </LinearLayout>

</LinearLayout>