<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/button_search"/>

    <!--<com.google.android.gms.ads.AdView-->
    <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--ads:adSize="SMART_BANNER"-->
    <!--android:layout_below="@+id/searchButton"-->
    <!--android:id="@+id/adView"-->
    <!--ads:adUnitId="ca-app-pub-1877164599441785/5736275864"/>-->
    <FrameLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton">
    </FrameLayout>


    <com.wenjoyai.tubeplayer.gui.view.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/adContainer">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.wenjoyai.tubeplayer.gui.view.AutoFitRecyclerView
                android:id="@id/android:list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:fadingEdge="none"
                android:fastScrollEnabled="true"
                android:gravity="center"
                android:numColumns="auto_fit"
                android:padding="@dimen/default_margin"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:stretchMode="none"/>

            <com.wenjoyai.tubeplayer.gui.helpers.RecyclerViewHeader
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/header_text"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:paddingStart="@dimen/header_info_margin"
                        android:paddingLeft="@dimen/header_info_margin"
                        android:background="#d8d8d8"
                        android:fontFamily="sans-serif"
                        android:textColor="#4a4a4a"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="normal"
                        />

                    <LinearLayout
                        android:id="@+id/folder_directories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/default_margin"
                        android:paddingTop="@dimen/very_small_margin"
                        android:paddingBottom="@dimen/very_small_margin">

                        <!--<ImageView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:src="@drawable/ic_directories"-->
                            <!--/>-->
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_folder_black_24dp"
                                android:scaleType="centerCrop"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:background="@drawable/ic_search_fold_icon"/>

                        </FrameLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_margin"
                            android:layout_marginStart="@dimen/default_margin"
                            android:text="@string/directories"
                            android:textColor="?attr/list_title"
                            android:textSize="@dimen/full_title_text_size"
                            />
                    </LinearLayout>
                </LinearLayout>
            </com.wenjoyai.tubeplayer.gui.helpers.RecyclerViewHeader>
        </FrameLayout>
    </com.wenjoyai.tubeplayer.gui.view.SwipeRefreshLayout>

    <LinearLayout
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_nomedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:drawableBottom="@drawable/icon"
            android:drawablePadding="@dimen/default_margin"
            android:gravity="center"
            android:maxWidth="600dp"
            android:text="@string/nomedia"
            android:textSize="20sp"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/layout_flipper_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/loading"
                android:textSize="20sp"/>

            <ViewFlipper
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:autoStart="true"
                android:flipInterval="1000">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/empty"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_1_period"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_2_period"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/load_3_period"
                    android:textSize="20sp"/>
            </ViewFlipper>
        </LinearLayout>
    </LinearLayout>

    <!--<include layout="@layout/shadow_top" />-->
</RelativeLayout>
